partial implementation of comments from @jbracher

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -555,3 +555,100 @@
   primaryClass  = "cs.LG",
   arxivid       = "2209.09617"
 }
+
+@ARTICLE{Nixon2022-zv,
+  title    = "An evaluation of prospective {COVID-19} modelling studies in the
+              {USA}: from data to science translation",
+  author   = "Nixon, Kristen and Jindal, Sonia and Parker, Felix and Reich,
+              Nicholas G and Ghobadi, Kimia and Lee, Elizabeth C and Truelove,
+              Shaun and Gardner, Lauren",
+  journal  = "Lancet Digit Health",
+  volume   =  4,
+  number   =  10,
+  pages    = "e738--e747",
+  month    =  oct,
+  year     =  2022,
+  language = "en",
+  issn     = "2589-7500",
+  pmid     = "36150782",
+  doi      = "10.1016/S2589-7500(22)00148-0",
+  pmc      = "PMC9489063"
+}
+
+@UNPUBLISHED{Bracher2022-ug,
+  title    = "National and subnational short-term forecasting of {COVID-19} in
+              Germany and Poland during early 2021",
+  author   = "Bracher, Johannes and Wolffram, Daniel and Deuschel, Jannik and
+              G{\"o}rgen, Konstantin and Ketterer, Jakob L and Ullrich,
+              Alexander and Abbott, Sam and Barbarossa, Maria V and Bertsimas,
+              Dimitris and Bhatia, Sangeeta and Bodych, Marcin and Bosse, Nikos
+              I and Burgard, Jan Pablo and Castro, Lauren and Fairchild,
+              Geoffrey and Fiedler, Jochen and Fuhrmann, Jan and Funk,
+              Sebastian and Gambin, Anna and Gogolewski, Krzysztof and Heyder,
+              Stefan and Hotz, Thomas and Kheifetz, Yuri and Kirsten, Holger
+              and Krueger, Tyll and Krymova, Elena and Leith{\"a}user, Neele
+              and Li, Michael L and Meinke, Jan H and Miasojedow, B{\l}a{\.z}ej
+              and Michaud, Isaac J and Mohring, Jan and Nouvellet, Pierre and
+              Nowosielski, Jedrzej M and Ozanski, Tomasz and Radwan, Maciej and
+              Rakowski, Franciszek and Scholz, Markus and Soni, Saksham and
+              Srivastava, Ajitesh and Gneiting, Tilmann and Schienle, Melanie",
+  journal  = "medRxiv",
+  pages    = "2021.11.05.21265810",
+  month    =  aug,
+  year     =  2022,
+  language = "en",
+  doi      = "10.1101/2021.11.05.21265810"
+}
+
+@ARTICLE{Rakowski2010-ft,
+  title     = "Influenza epidemic spread simulation for Poland --- a large
+               scale, individual based model study",
+  author    = "Rakowski, Franciszek and Gruziel, Magdalena and
+               Bieniasz-Krzywiec, {\L}ukasz and Radomski, Jan P",
+  journal   = "Physica A: Statistical Mechanics and its Applications",
+  publisher = "Elsevier",
+  volume    =  389,
+  number    =  16,
+  pages     = "3149--3165",
+  year      =  2010,
+  keywords  = "Agent based model; Social network; Transportation model; Disease
+               spread model;",
+  issn      = "0378-4371"
+}
+
+@UNPUBLISHED{Adamik2020-if,
+  title       = "Mitigation and herd immunity strategy for {COVID-19} is likely
+                 to fail",
+  author      = "Adamik, Barbara and Bawiec, Marek and Bezborodov, Viktor and
+                 Bock, Wolfgang and Bodych, Marcin and Burgard, Jan Pablo and
+                 G{\"o}tz, Thomas and Krueger, Tyll and Migalska, Agata and
+                 Pabjan, Barbara and O{\.z}a{\'n}ski, Tomasz and
+                 Rafaj{\l}owicz, Ewaryst and Rafaj{\l}owicz, Wojciech and
+                 Skubalska-Rafaj{\l}owicz, Ewa and Ryfczy{\'n}ska, Sara and
+                 Szczurek, Ewa and Szyma{\'n}ski, Piotr",
+  journal     = "bioRxiv",
+  institution = "medRxiv",
+  month       =  mar,
+  year        =  2020,
+  doi         = "10.1101/2020.03.25.20043109"
+}
+
+@ARTICLE{Ray2022-zq,
+  title    = "Comparing trained and untrained probabilistic ensemble forecasts
+              of {COVID-19} cases and deaths in the United States",
+  author   = "Ray, Evan L and Brooks, Logan C and Bien, Jacob and Biggerstaff,
+              Matthew and Bosse, Nikos I and Bracher, Johannes and Cramer,
+              Estee Y and Funk, Sebastian and Gerding, Aaron and Johansson,
+              Michael A and Rumack, Aaron and Wang, Yijin and Zorn, Martha and
+              Tibshirani, Ryan J and Reich, Nicholas G",
+  journal  = "Int. J. Forecast.",
+  month    =  jul,
+  year     =  2022,
+  keywords = "COVID-19; Ensemble; Epidemiology; Health forecasting; Quantile
+              combination",
+  language = "en",
+  issn     = "0169-2070",
+  pmid     = "35791416",
+  doi      = "10.1016/j.ijforecast.2022.06.005",
+  pmc      = "PMC9247236"
+}
